# LKG-GEN

./: .gitignore  API接口文档.md  Makefile  PROJECT_DOCUMENTATION.md  README.md  graph.html  main.py  pyproject.toml
backend/: README.md  __init__.py  config.py  data_manager.py  kg_builder.py  kg_platform.db  kg_wrapper.py  main.py  migrate_entity_paths.py  pipeline.py  requirements.txt
backend/app/api/: deps.py
backend/app/core/: chunker.py  config.py  disambiguation.py  document_cleaner.py  entity_extractor.py  logging_config.py  middleware.py  relation_extractor.py  utils.py
backend/app/crud/: crud_ai_config.py  crud_entity.py  crud_graph.py  crud_prompt.py  crud_system_config.py
backend/app/db/: neo4j_session.py
backend/app/models/: sqlite_models.py
backend/app/prompts/: ner_prompt.txt  re_prompt.txt
backend/app/schemas/: ai_config.py  entity.py  graph.py  prompt.py  relation.py  system_config.py
backend/core/: __init__.py  chunker.py  config.py  graph_processor.py  ner_processor.py  relation_extractor.py  utils.py
backend/prompts/: disambiguation_prompt.txt  entity_validation_prompt.txt  ner_prompt.txt  re_prompt.txt
backend/scripts/: clear_neo4j.py  create_sample_document.py  import_xlsx_triplets.py  init_ai_configs.py  init_db.py  init_prompts.py
backend_test/: main.py
frontend/: package.json  pnpm-lock.yaml
frontend/public/: index.html
frontend/src/: App.tsx  index.css
src/prompts/: re_prompt.txt
src/scripts/: config.py  graph.html  step2_ner.py  step3_re.py  step_chunk.py  step_disambiguate.py  utils.py  visualize_graph.py
(+56 files in other folders)
