[project]
name = "lkg-gen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai>=1.98.0",
    "tqdm>=4.67.1",
    "streamlit>=1.39.0",
    "networkx>=3.4.2",
    "pyvis>=0.3.2",
    "plotly>=6.2.0",
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
    "python-multipart>=0.0.20",
    "pydantic>=2.11.7",
    "python-jose>=3.5.0",
    "passlib>=1.7.4",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple"
default = true
